--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="/bundle.js" defer></script>
+  <script src="./dist/bundle.js" defer></script>
   <title>Document</title>
 </head>
 <body>
