--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="/public/app.css" />
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="text/javascript" src="/public/bundle.js" charset="utf-8"></script>
-  </body>
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="text/css" href="/public/app.css" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="text/javascript" src="/public/bundle.js" charset="utf-8"></script>
+</body>
+
 </html>
